<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/title_text_size"
        android:text="@string/parse_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_id"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />

    <TextView
        android:id="@+id/tv_userid"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_userid"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_userid" />

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/et_id_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:numeric="decimal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_id"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/et_userid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/et_userid_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:numeric="decimal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_userid"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/et_title_hint"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/et_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/et_body_hint"
        app:layout_constraintBottom_toBottomOf="@+id/tv_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_body"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/btn_parse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_parse_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_body" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_selector"
        android:text="POST"
        app:layout_constraintBottom_toBottomOf="@+id/btn_parse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_parse"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_parseby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:text="Parseby"
        app:layout_constraintBottom_toBottomOf="@+id/btn_parse"
        app:layout_constraintEnd_toStartOf="@+id/btn_post"
        app:layout_constraintStart_toEndOf="@+id/btn_parse"
        app:layout_constraintTop_toTopOf="@+id/btn_parse"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>