<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ParseActivity">

    <TextView
        android:id="@+id/tv_id2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_id"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_userid2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_userid"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_id2"
        app:layout_constraintTop_toBottomOf="@+id/tv_idresult" />

    <TextView
        android:id="@+id/tv_body2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_body"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title2"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleresult" />

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_userid2"
        app:layout_constraintTop_toBottomOf="@+id/tv_useridresult" />

    <Button
        android:id="@+id/btn_parseactivity_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:text="@string/text_back_parseactivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_left"
        app:layout_constraintBottom_toTopOf="@+id/btn_parseactivity_back"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_right"
        app:layout_constraintBottom_toTopOf="@+id/btn_parseactivity_back"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_idresult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="result"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id2" />

    <TextView
        android:id="@+id/tv_useridresult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="result"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userid2" />

    <TextView
        android:id="@+id/tv_titleresult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="result"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_useridresult"
        app:layout_constraintTop_toBottomOf="@+id/tv_title2" />

    <TextView
        android:id="@+id/tv_bodyresult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="result"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_body2" />

    <TextView
        android:id="@+id/tv_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_right"
        app:layout_constraintEnd_toStartOf="@+id/btn_right"
        app:layout_constraintStart_toEndOf="@+id/btn_left"
        app:layout_constraintTop_toTopOf="@+id/btn_right" />
</androidx.constraintlayout.widget.ConstraintLayout>